--- a/web/emovweb/css/style.css
+++ b/web/emovweb/css/style.css
@@ -50,3 +50,22 @@ display: block;
 	width: 100%;
 	height:100%; 
 }
+
+.circulo{
+  width: 4.5rem;
+	height: 4.5rem;
+  border-radius: 50%;
+  position: absolute;
+  left: 90%;
+  bottom: 4%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center; 
+}
+.circulo-mas{ 
+  width: 3rem;
+	height: 3rem;
+  color: white;
+	font-size: 2rem;
+}
